--- a/ui/newupload.ui
+++ b/ui/newupload.ui
@@ -22,6 +22,97 @@
     <height>850</height>
    </size>
   </property>
+  <property name="palette">
+   <palette>
+    <active>
+     <colorrole role="Button">
+      <brush brushstyle="SolidPattern">
+       <color alpha="255">
+        <red>9</red>
+        <green>46</green>
+        <blue>33</blue>
+       </color>
+      </brush>
+     </colorrole>
+     <colorrole role="Base">
+      <brush brushstyle="SolidPattern">
+       <color alpha="255">
+        <red>9</red>
+        <green>46</green>
+        <blue>33</blue>
+       </color>
+      </brush>
+     </colorrole>
+     <colorrole role="Window">
+      <brush brushstyle="SolidPattern">
+       <color alpha="255">
+        <red>9</red>
+        <green>46</green>
+        <blue>33</blue>
+       </color>
+      </brush>
+     </colorrole>
+    </active>
+    <inactive>
+     <colorrole role="Button">
+      <brush brushstyle="SolidPattern">
+       <color alpha="255">
+        <red>9</red>
+        <green>46</green>
+        <blue>33</blue>
+       </color>
+      </brush>
+     </colorrole>
+     <colorrole role="Base">
+      <brush brushstyle="SolidPattern">
+       <color alpha="255">
+        <red>9</red>
+        <green>46</green>
+        <blue>33</blue>
+       </color>
+      </brush>
+     </colorrole>
+     <colorrole role="Window">
+      <brush brushstyle="SolidPattern">
+       <color alpha="255">
+        <red>9</red>
+        <green>46</green>
+        <blue>33</blue>
+       </color>
+      </brush>
+     </colorrole>
+    </inactive>
+    <disabled>
+     <colorrole role="Button">
+      <brush brushstyle="SolidPattern">
+       <color alpha="255">
+        <red>9</red>
+        <green>46</green>
+        <blue>33</blue>
+       </color>
+      </brush>
+     </colorrole>
+     <colorrole role="Base">
+      <brush brushstyle="SolidPattern">
+       <color alpha="255">
+        <red>9</red>
+        <green>46</green>
+        <blue>33</blue>
+       </color>
+      </brush>
+     </colorrole>
+     <colorrole role="Window">
+      <brush brushstyle="SolidPattern">
+       <color alpha="255">
+        <red>9</red>
+        <green>46</green>
+        <blue>33</blue>
+       </color>
+      </brush>
+     </colorrole>
+    </disabled>
+   </palette>
+  </property>
   <property name="windowTitle">
    <string>JaunaSene</string>
   </property>
@@ -29,79 +120,24 @@
    <string notr="true">background-color: rgb(9, 46, 33);</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QTextBrowser" name="imageselected">
+   <widget class="QLabel" name="instructionlabel">
     <property name="geometry">
      <rect>
-      <x>120</x>
-      <y>400</y>
-      <width>291</width>
-      <height>192</height>
-     </rect>
-    </property>
-    <property name="maximumSize">
-     <size>
-      <width>291</width>
-      <height>192</height>
-     </size>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">background-color: rgb(56, 67, 56);
-padding: 70px 0;
-text-align: center;</string>
-    </property>
-    <property name="locale">
-     <locale language="Latvian" country="Latvia"/>
-    </property>
-    <property name="html">
-     <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
-&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
-p, li { white-space: pre-wrap; }
-&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'MS Shell Dlg 2'; font-size:7.8pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p align=&quot;center&quot; style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:14pt; font-weight:600; color:#c7daba;&quot;&gt;Nav izvēlēts fails&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="homebutton">
-    <property name="geometry">
-     <rect>
-      <x>20</x>
-      <y>20</y>
-      <width>71</width>
-      <height>71</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <weight>75</weight>
-      <bold>true</bold>
-     </font>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">border-radius: 30px;
-background-color: rgb(66, 88, 56);
-color: rgb(199, 218, 186);</string>
-    </property>
-    <property name="text">
-     <string>mājas</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="newtitle">
-    <property name="geometry">
-     <rect>
-      <x>170</x>
-      <y>40</y>
-      <width>181</width>
+      <x>130</x>
+      <y>140</y>
+      <width>261</width>
       <height>41</height>
      </rect>
     </property>
     <property name="minimumSize">
      <size>
-      <width>181</width>
+      <width>261</width>
       <height>41</height>
      </size>
     </property>
     <property name="maximumSize">
      <size>
-      <width>181</width>
+      <width>261</width>
       <height>41</height>
      </size>
     </property>
@@ -253,7 +289,7 @@ color: rgb(199, 218, 186);</string>
     <property name="font">
      <font>
       <family>Comic Sans MS</family>
-      <pointsize>20</pointsize>
+      <pointsize>15</pointsize>
       <weight>75</weight>
       <bold>true</bold>
      </font>
@@ -265,7 +301,7 @@ color: rgb(199, 218, 186);</string>
      <locale language="Latvian" country="Latvia"/>
     </property>
     <property name="text">
-     <string>Jauna sēne</string>
+     <string>Pievieno sēnes attēlu!</string>
     </property>
     <property name="wordWrap">
      <bool>false</bool>
@@ -487,24 +523,24 @@ color: rgb(199, 218, 186);</string>
      <string>Augšupielādēt failu</string>
     </property>
    </widget>
-   <widget class="QLabel" name="instructionlabel">
+   <widget class="QLabel" name="newtitle">
     <property name="geometry">
      <rect>
-      <x>130</x>
-      <y>140</y>
-      <width>261</width>
+      <x>170</x>
+      <y>40</y>
+      <width>181</width>
       <height>41</height>
      </rect>
     </property>
     <property name="minimumSize">
      <size>
-      <width>261</width>
+      <width>181</width>
       <height>41</height>
      </size>
     </property>
     <property name="maximumSize">
      <size>
-      <width>261</width>
+      <width>181</width>
       <height>41</height>
      </size>
     </property>
@@ -656,7 +692,7 @@ color: rgb(199, 218, 186);</string>
     <property name="font">
      <font>
       <family>Comic Sans MS</family>
-      <pointsize>15</pointsize>
+      <pointsize>20</pointsize>
       <weight>75</weight>
       <bold>true</bold>
      </font>
@@ -668,7 +704,7 @@ color: rgb(199, 218, 186);</string>
      <locale language="Latvian" country="Latvia"/>
     </property>
     <property name="text">
-     <string>Pievieno sēnes attēlu!</string>
+     <string>Jauna sēne</string>
     </property>
     <property name="wordWrap">
      <bool>false</bool>
@@ -688,14 +724,14 @@ color: rgb(199, 218, 186);</string>
     </property>
     <property name="minimumSize">
      <size>
-      <width>351</width>
-      <height>20</height>
+      <width>401</width>
+      <height>61</height>
      </size>
     </property>
     <property name="maximumSize">
      <size>
-      <width>3000</width>
-      <height>666</height>
+      <width>401</width>
+      <height>61</height>
      </size>
     </property>
     <property name="palette">
@@ -911,8 +947,8 @@ color: rgb(181, 229, 4);</string>
     </property>
     <property name="maximumSize">
      <size>
-      <width>43657</width>
-      <height>16777215</height>
+      <width>371</width>
+      <height>51</height>
      </size>
     </property>
     <property name="palette">
@@ -1085,6 +1121,79 @@ color: rgb(181, 229, 4);</string>
     </property>
     <property name="margin">
      <number>0</number>
+    </property>
+   </widget>
+   <widget class="QTextBrowser" name="imageselected">
+    <property name="geometry">
+     <rect>
+      <x>120</x>
+      <y>400</y>
+      <width>291</width>
+      <height>192</height>
+     </rect>
+    </property>
+    <property name="minimumSize">
+     <size>
+      <width>291</width>
+      <height>192</height>
+     </size>
+    </property>
+    <property name="maximumSize">
+     <size>
+      <width>291</width>
+      <height>192</height>
+     </size>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(56, 67, 56);
+padding: 70px 0;
+text-align: center;</string>
+    </property>
+    <property name="locale">
+     <locale language="Latvian" country="Latvia"/>
+    </property>
+    <property name="html">
+     <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
+&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
+p, li { white-space: pre-wrap; }
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'MS Shell Dlg 2'; font-size:7.8pt; font-weight:400; font-style:normal;&quot;&gt;
+&lt;p align=&quot;center&quot; style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:14pt; font-weight:600; color:#c7daba;&quot;&gt;Nav izvēlēts fails&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="homebutton">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>20</y>
+      <width>71</width>
+      <height>71</height>
+     </rect>
+    </property>
+    <property name="minimumSize">
+     <size>
+      <width>71</width>
+      <height>71</height>
+     </size>
+    </property>
+    <property name="maximumSize">
+     <size>
+      <width>71</width>
+      <height>71</height>
+     </size>
+    </property>
+    <property name="font">
+     <font>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">border-radius: 30px;
+background-color: rgb(66, 88, 56);
+color: rgb(199, 218, 186);</string>
+    </property>
+    <property name="text">
+     <string>mājas</string>
     </property>
    </widget>
   </widget>
